# master-thesis

./: .gitignore  .gitmodules  CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  README.md  annotated.html  annotationExtract_8cpp.html  annotationExtract_8hpp.html  annotationExtract_8hpp_source.html  classes.html  classobjsearch_1_1featureExtraction_1_1FeatureExtractor-members.html  classobjsearch_1_1featureExtraction_1_1FeatureExtractor.html  classobjsearch_1_1objectquery_1_1ObjectQuery-members.html  classobjsearch_1_1objectquery_1_1ObjectQuery.html  classobjsearch_1_1pclutil_1_1Grid3D-members.html  classobjsearch_1_1pclutil_1_1Grid3D.html  classobjsearch_1_1pclutil_1_1OrientedBoundingBox-members.html  classobjsearch_1_1pclutil_1_1OrientedBoundingBox.html  classobjsearch_1_1preprocessing_1_1PreprocessRoom-members.html  classobjsearch_1_1preprocessing_1_1PreprocessRoom.html  classobjsearch_1_1sysutil_1_1objsearchexception-members.html  classobjsearch_1_1sysutil_1_1objsearchexception.html  classtesting_1_1pclutil_1_1PCLUtilTest-members.html  classtesting_1_1pclutil_1_1PCLUtilTest.html  cloudBounds_8cpp.html  cloudBounds_8hpp.html  cloudBounds_8hpp_source.html  cloudBounds__main_8cpp.html  cloudCreator_8cpp.html  cloudMerger_8cpp.html  cloudRotator_8cpp.html  cloudViewer_8cpp.html  cloudViewer_8hpp.html  cloudViewer_8hpp_source.html  cloudViewer__main_8cpp.html  colourConversion_8cpp.html  colourConversion_8hpp.html  colourConversion_8hpp_source.html  colourcheck_8py.html  dir_056f40afd31ff88849c6f7351ce5cef0.html  (+156 more)
code/obj_search/feature_extraction/: CMakeLists.txt  package.xml
code/obj_search/feature_extraction/launch/: feature_extraction.launch
code/obj_search/feature_extraction/src/: featureExtraction.cpp  featureExtraction.hpp
code/obj_search/object_query/: CMakeLists.txt  package.xml
code/obj_search/object_query/config/: params.yaml
code/obj_search/object_query/launch/: object_query.launch
code/obj_search/object_query/src/: objectQuery.cpp  objectQuery.hpp
code/obj_search/objsearch_toplevel/: CMakeLists.txt  package.xml
code/obj_search/preprocess/: CMakeLists.txt  package.xml
code/obj_search/preprocess/launch/: planetest.launch  preprocess.launch  rotationtest.launch
code/obj_search/preprocess/src/: findRotation.cpp  planeTest.cpp  planeTest.hpp  preprocess.cpp  preprocess.hpp
code/obj_search/test/: CMakeLists.txt  package.xml
code/obj_search/test/src/: pclutil_test.cpp  sysutil_test.cpp
code/obj_search/util/pclutil/: CMakeLists.txt  package.xml
code/obj_search/util/pclutil/include/pclutil/: annotationExtract.hpp  cloudBounds.hpp  cloudViewer.hpp  colourConversion.hpp  grid3d.hpp  pointValidation.hpp
code/obj_search/util/pclutil/src/: annotationExtract.cpp  cloudBounds.cpp  cloudBounds_main.cpp  cloudCreator.cpp  cloudMerger.cpp  cloudRotator.cpp  cloudViewer.cpp  cloudViewer_main.cpp  colourConversion.cpp  downsampleCloud.cpp  grid3d.cpp  pfhtest.cpp  pointValidation.cpp  trimCloud.cpp
code/obj_search/util/rosutil/: CMakeLists.txt  package.xml
code/obj_search/util/rosutil/include/rosutil/: rosutil.hpp
code/obj_search/util/rosutil/src/: rosutil.cpp
code/obj_search/util/sysutil/: CMakeLists.txt  package.xml
code/obj_search/util/sysutil/include/sysutil/: sysutil.hpp
code/obj_search/util/sysutil/src/: sysutil.cpp
code/scripts/: catmake.sh  colourcheck.py  combinefeature.py  experiment.sh  process.py  timed.sh
code/scripts/exp/: makepics.sh
code/scripts/features/: featureprocess.py  make_datafiles.sh  move.sh  screenshot.sh
code/scripts/plots/: aggregate_interest.plt  feature_time.plt  fit.plt  histogram.plt  interest_cloudpts.plt
code/scripts/preprocess/: process.py
code/scripts/query/: get_results.sh  object_view.sh  process_results.py  run_queries.sh  run_queries2.sh  selectobjects.sh  topnclusters.sh  view_topclusters.sh
code/test/: CMakeLists.txt  tests.cpp  totest.cpp  totest.hpp
data/: box.pcd  boxnormals.pcd  commands.txt
data/camera_params/: cluster_exp.cam  cluster_exp_close.cam  interest.cam  johandesk.cam  johandesk_untr.cam  nils_side.cam  nils_side_untr.cam  nilsdesk_front.cam  nilsdesk_front_untr.cam  orig_diag_left.cam  orig_diag_right.cam  orig_side.cam  orig_top.cam  orig_transformed.cam  plane_normal.cam  room_exp.cam  slice_side.cam  sofa.cam  sofa_untr.cam  trans_diag_left.cam  trans_diag_right.cam  trans_side.cam  trans_top.cam  votes.cam
data/features/aggregate/: fpfh_data_agg.txt  full_iss_short.txt  full_sift_short.txt  full_susan_short.txt  full_uniform_short.txt  iss_data_agg.txt  iss_data_short.txt  pfh_data_agg.txt  pfhrgb_data_agg.txt  shot_data_agg.txt  shotcolor_data_agg.txt  sift_data_agg.txt  sift_data_short.txt  susan_data_agg.txt  susan_data_short.txt  uniform_data_agg.txt  uniform_data_short.txt
data/features/annotations/: fpfh_data_agg.txt  iss_data_agg.txt  iss_data_short.txt  pfh_data_agg.txt  pfhrgb_data_agg.txt  shot_data_agg.txt  shotcolor_data_agg.txt  sift_data_short.txt  susan_data_short.txt  uniform_data_agg.txt  uniform_data_short.txt
data/features/broken/: featuredata_shot_iss_2015-05-29_12-50-53.txt  (+3 more)
data/query/: test.txt  test10.txt  test11.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
docs/: notes.org
docs/doxygen/: Doxyfile  mainpage.dox  namespaces.txt
docs/literature_review/: lit_review.tex
docs/opposition/: opposition.tex
docs/presentation/: pres.tex
docs/report/: _region_.tex  cite_tree.txt  kth-mag.cls  kth_svv.eps  memoir.cls  modifications.sty  report.bib  report.tex
docs/specification/: specification.tex
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_6.js  (+52 more)
(+4784 files in other folders)
