<?xml version="1.0"?>
<package>
  <name>testing</name>
  <version>0.0.0</version>
  <description>Package </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="michalst@kth.se">michal</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosunit</build_depend>
  <run_depend>rosunit</run_depend>
  <build_depend>sysutil</build_depend>
  <run_depend>sysutil</run_depend>
  <build_depend>pclutil</build_depend>
  <run_depend>pclutil</run_depend>
  <build_depend>pcl_ros</build_depend>
  <run_depend>pcl_ros</run_depend>

</package>
