<?xml version="1.0"?>
<package>
  <name>rosutil</name>
  <version>0.0.0</version>
  <description>Package for ROS utility libraries</description>

  <maintainer email="ras@todo.todo">me</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
